--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
         
         <div class="box">
             <div class="field">
-                <label class="label" for="caliberSelect">Select Preset</label>
+                <label class="label" for="caliberSelect">Presets</label>
                 <div class="control is-expanded">
                     <div class="select is-fullwidth">
                         <select id="caliberSelect" onchange="loadPreset()">
-                            <option value="">Custom Values</option>
-                            <optgroup label="User Presets" id="userPresets">
+                            <optgroup label="Your Loads" id="userPresets">
                             </optgroup>
                             <option disabled>──────────</option>
-                            <optgroup label="Factory Presets">
+                            <optgroup label="Common Loads">
                                 <option value=".22 LR">.22 LR</option>
                                 <option value=".223 Remington">.223 Remington</option>
                                 <option value=".243 Winchester">.243 Winchester</option>
@@ -33,7 +32,7 @@
                                 <option value=".30-06 Springfield">.30-06 Springfield</option>
                                 <option value=".300 Winchester Magnum">.300 Winchester Magnum</option>
                                 <option value="6.5 PRC">6.5 PRC</option>
-                                <option value=".300 RUM">.300 RUM</option>
+                                <option value="45-70">45-70</option>
                             </optgroup>
                         </select>
                     </div>
