edit about page

--- a/about.html
+++ b/about.html
@@ -12,10 +12,9 @@
         <h1 class="title is-3">About the Bang–Thump Calculator</h1>
         
         <div class="content">
-            <p>The Bang–Thump Distance Calculator is a tool that helps shooters estimate the distance to their target using the time delay between a rifle's report ("bang") and the sound of the bullet impact ("thump").</p>
+            <p>The Bang–Thump Distance Calculator estimates the distance to the target using the time delay between a rifle's report ("bang") and the sound of the bullet impact ("thump").</p>
 
-            <h2 class="title is-4">How It Works</h2>
-            <p>The calculator estimates distance by measuring the total time between shot and impact sound. It accounts for both the bullet's flight time (calculated using linear velocity interpolation) and the time it takes for the sound of the impact to travel back to the shooter at the speed of sound.</p>
+            <p>The calculator numerically solves for the distance by modeling bullet travel time (with a simple linear velocity drop) plus the time for the sound to travel back to the shooter.</p>
 
             <p>Your custom presets are stored locally in your browser for future use.</p>
 
